--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+
+    <script
+      src="https://kit.fontawesome.com/a27049c236.js"
       crossorigin="anonymous"
-    />
+      defer
+    ></script>
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
